// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieForm component tests renders empty MovieForm component 1`] = `
<div>
  <form
    class="movie-form"
  >
    <div
      class="movie-form-content"
    >
      <div
        class="input-field"
      >
        <label
          for="movieTitle"
        >
          Title
        </label>
        <input
          class="title"
          id="movieTitle"
          name="movieTitle"
          type="text"
          value=""
        />
      </div>
      <div
        class="input-field"
      >
        <label
          for="movieReleaseDate"
        >
          Release date
        </label>
        <input
          class="release date"
          id="movieReleaseDate"
          name="movieReleaseDate"
          type="date"
          value=""
        />
      </div>
      <div
        class="input-field"
      >
        <label
          for="movieUrl"
        >
          Movie URL
        </label>
        <input
          class="movie url"
          id="movieUrl"
          name="movieUrl"
          type="text"
          value="/images/movies-list/bohemianRhapsody.png"
        />
      </div>
      <div
        class="input-field"
      >
        <label
          for="movieRating"
        >
          Rating
        </label>
        <input
          class="rating"
          id="movieRating"
          name="movieRating"
          type="text"
          value=""
        />
      </div>
      <div
        class="input-field"
      >
        <button
          class="button dropdown-opener"
          type="dropdown-opener"
        >
          Select Genre
        </button>
      </div>
      <div
        class="input-field"
      >
        <label
          for="movieRuntime"
        >
          Runtime
        </label>
        <input
          class="runtime"
          id="movieRuntime"
          name="movieRuntime"
          type="text"
          value="N/A"
        />
      </div>
      <div
        class="input-field textarea"
      >
        <label
          for="movieOverview"
        >
          Overview
        </label>
        <textarea
          class="textarea"
          id="movieOverview"
          name="movieOverview"
        />
      </div>
    </div>
    <div
      class="movie-form-confirmation-control"
    >
      <button
        class="button submit"
        type="submit"
      >
        Reset
      </button>
      <button
        class="button submit"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`MovieForm component tests renders empty MovieForm component with initial movie 1`] = `
<div>
  <form
    class="movie-form"
  >
    <div
      class="movie-form-content"
    >
      <div
        class="input-field"
      >
        <label
          for="movieTitle"
        >
          Title
        </label>
        <input
          class="title"
          id="movieTitle"
          name="movieTitle"
          type="text"
          value="Fifty Shades Freed"
        />
      </div>
      <div
        class="input-field"
      >
        <label
          for="movieReleaseDate"
        >
          Release date
        </label>
        <input
          class="release date"
          id="movieReleaseDate"
          name="movieReleaseDate"
          type="date"
          value="2018-02-07"
        />
      </div>
      <div
        class="input-field"
      >
        <label
          for="movieUrl"
        >
          Movie URL
        </label>
        <input
          class="movie url"
          id="movieUrl"
          name="movieUrl"
          type="text"
          value="/images/movies-list/bohemianRhapsody.png"
        />
      </div>
      <div
        class="input-field"
      >
        <label
          for="movieRating"
        >
          Rating
        </label>
        <input
          class="rating"
          id="movieRating"
          name="movieRating"
          type="text"
          value="6.1"
        />
      </div>
      <div
        class="input-field"
      >
        <button
          class="button dropdown-opener"
          type="dropdown-opener"
        >
          Select Genre
        </button>
      </div>
      <div
        class="input-field"
      >
        <label
          for="movieRuntime"
        >
          Runtime
        </label>
        <input
          class="runtime"
          id="movieRuntime"
          name="movieRuntime"
          type="text"
          value="1h 46min"
        />
      </div>
      <div
        class="input-field textarea"
      >
        <label
          for="movieOverview"
        >
          Overview
        </label>
        <textarea
          class="textarea"
          id="movieOverview"
          name="movieOverview"
        >
          Believing they have left behind shadowy figures from their past, newlyweds Christian and Ana fully embrace an inextricable connection and shared life of luxury. But just as she steps into her role as Mrs. Grey and he relaxes into an unfamiliar stability, new threats could jeopardize their happy ending before it even begins.
        </textarea>
      </div>
    </div>
    <div
      class="movie-form-confirmation-control"
    >
      <button
        class="button submit"
        type="submit"
      >
        Reset
      </button>
      <button
        class="button submit"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;
